--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
 
 <div ng-view></div>
 
+<script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+
 <!-- build:js(src) scripts/vendor.js -->
 <!-- bower:js -->
 <!-- run `gulp inject` to automatically populate bower script dependencies -->
